--- a/dashboard.html
+++ b/dashboard.html
@@ -24,25 +24,25 @@
         }
 
         .sidebar {
-            width: 260px;
+            width: 240px;
             background: #1f1f1f;
             padding: 20px;
             box-shadow: 4px 0 15px rgba(0, 0, 0, 0.4);
             flex-shrink: 0;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: flex-start;
         }
 
         .sidebar h2 {
             font-size: 24px;
             text-align: center;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
             color: #ffffff;
         }
 
         .sidebar .nav-item {
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .sidebar .nav-item a {
@@ -51,8 +51,8 @@
             font-weight: bold;
             font-size: 18px;
             display: block;
-            padding: 12px 20px;
-            border-radius: 8px;
+            padding: 10px 18px;
+            border-radius: 6px;
             transition: background 0.3s ease, color 0.3s ease;
         }
 
@@ -64,7 +64,7 @@
 
         .content-area {
             flex-grow: 1;
-            padding: 40px;
+            padding: 30px;
             background: #121212;
             display: flex;
             flex-direction: column;
@@ -76,11 +76,11 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 30px;
+            margin-bottom: 25px;
         }
 
         .content-header h1 {
-            font-size: 32px;
+            font-size: 30px;
             font-weight: bold;
             color: #ffffff;
             margin: 0;
@@ -99,31 +99,31 @@
         }
 
         .user-info span {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: bold;
             color: #ffffff;
         }
 
         .content-section {
             background: #1f1f1f;
-            padding: 30px;
-            border-radius: 12px;
+            padding: 25px;
+            border-radius: 10px;
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
-            margin-bottom: 30px;
+            margin-bottom: 25px;
             transition: all 0.3s ease;
         }
 
         .content-section h2 {
-            font-size: 28px;
-            margin-bottom: 15px;
+            font-size: 26px;
+            margin-bottom: 10px;
             color: #e94560;
         }
 
         .content-section p,
         .content-section ul {
-            font-size: 18px;
+            font-size: 16px;
             line-height: 1.6;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
             color: #cccccc;
         }
 
@@ -132,13 +132,13 @@
         }
 
         .content-section ul li {
-            margin-bottom: 10px;
+            margin-bottom: 8px;
         }
 
         .content-section label {
             display: block;
-            margin-bottom: 10px;
-            font-size: 18px;
+            margin-bottom: 8px;
+            font-size: 16px;
             color: #ffffff;
         }
 
@@ -148,8 +148,8 @@
         .content-section input[type="date"],
         .content-section input[type="time"] {
             width: 100%;
-            padding: 14px;
-            margin-bottom: 20px;
+            padding: 12px;
+            margin-bottom: 15px;
             border: none;
             border-radius: 8px;
             background: #333333;
@@ -170,14 +170,14 @@
         }
 
         .content-section button {
-            padding: 14px 24px;
+            padding: 12px 22px;
             background: #e94560;
             border: none;
             border-radius: 8px;
             cursor: pointer;
             color: white;
             font-weight: bold;
-            font-size: 18px;
+            font-size: 16px;
             transition: background 0.3s ease;
             box-shadow: 0 5px 20px rgba(233, 69, 96, 0.3);
         }
@@ -188,14 +188,14 @@
         }
 
         .assignment-list {
-            margin-top: 30px;
+            margin-top: 20px;
         }
 
         .assignment-item {
             background: #333333;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 20px;
+            padding: 18px;
+            border-radius: 8px;
+            margin-bottom: 15px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -214,36 +214,36 @@
         }
 
         .assignment-item span {
-            font-size: 18px;
+            font-size: 16px;
             color: #ffffff;
-            margin-bottom: 8px;
+            margin-bottom: 6px;
             display: block;
         }
 
         .assignment-item p {
             margin-top: 0;
-            font-size: 16px;
+            font-size: 14px;
             color: #cccccc;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .assignment-item time {
-            font-size: 14px;
+            font-size: 13px;
             color: #bbbbbb;
         }
 
         .assignment-actions {
             display: flex;
             justify-content: flex-end;
-            gap: 10px;
+            gap: 8px;
         }
 
         .assignment-actions button {
-            padding: 8px 15px;
-            font-size: 16px;
+            padding: 6px 12px;
+            font-size: 14px;
             background: #444444;
             color: white;
-            border-radius: 5px;
+            border-radius: 6px;
             border: none;
             cursor: pointer;
             transition: background 0.3s ease, box-shadow 0.3s ease;
@@ -276,20 +276,20 @@
 
         @media (max-width: 480px) {
             .content-header h1 {
-                font-size: 24px;
+                font-size: 22px;
             }
 
             .sidebar h2 {
-                font-size: 20px;
+                font-size: 18px;
             }
 
             .sidebar .nav-item a {
-                font-size: 16px;
+                font-size: 14px;
                 padding: 8px;
             }
 
             .user-info span {
-                font-size: 16px;
+                font-size: 14px;
             }
         }
     </style>
