--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
             margin: 0;
             position: relative;
             overflow: hidden;
+            background: radial-gradient(circle at center, #1a1a2e, #0f3460, #16213e);
         }
 
         .login-wrapper {
             background: #0a192f;
             padding: 40px;
             border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.8);
             width: 100%;
             max-width: 400px;
             text-align: center;
@@ -33,13 +34,14 @@
         }
 
         h2 {
-            font-size: 30px;
+            font-size: 32px;
             margin-bottom: 25px;
             background: linear-gradient(45deg, #ff416c, #ff4b2b);
             -webkit-background-clip: text;
             color: transparent;
             letter-spacing: 2px;
             text-transform: uppercase;
+            animation: fadeIn 1.2s ease;
         }
 
         input {
@@ -52,12 +54,14 @@
             color: white;
             font-size: 16px;
             transition: all 0.3s ease;
+            box-shadow: inset 0 5px 10px rgba(0, 0, 0, 0.5);
+            animation: fadeIn 1.4s ease;
         }
 
         input:focus {
             outline: none;
             background: rgba(255, 255, 255, 0.2);
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.2), inset 0 0 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.3), inset 0 0 10px rgba(0, 0, 0, 0.7);
         }
 
         button {
@@ -72,12 +76,13 @@
             font-weight: bold;
             font-size: 18px;
             transition: all 0.3s ease;
-            box-shadow: 0 7px 20px rgba(255, 75, 43, 0.5);
+            box-shadow: 0 10px 25px rgba(255, 75, 43, 0.7);
+            animation: fadeIn 1.6s ease;
         }
 
         button:hover {
-            transform: scale(1.05);
-            box-shadow: 0 10px 30px rgba(255, 75, 43, 0.7);
+            transform: scale(1.08);
+            box-shadow: 0 15px 35px rgba(255, 75, 43, 0.9);
         }
 
         .dashboard-button {
@@ -99,6 +104,7 @@
             box-shadow: 0 7px 20px rgba(0, 133, 81, 0.5);
             opacity: 1;
             pointer-events: auto;
+            animation: fadeIn 1.8s ease;
         }
 
         .dashboard-button.disabled {
@@ -115,6 +121,7 @@
             display: block;
             margin-top: 20px;
             transition: color 0.3s;
+            animation: fadeIn 2s ease;
         }
 
         .flip-link:hover {
@@ -185,6 +192,17 @@
                 font-size: 12px;
             }
         }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
     </style>
 </head>
 <body>
@@ -208,7 +226,6 @@
         }
 
         function getUserEmail() {
-            // Example to simulate getting the user's email
             return localStorage.getItem('userEmail'); 
         }
 
@@ -242,7 +259,6 @@
             const username = event.target.username.value;
             const password = event.target.password.value;
 
-            // Simulate login
             if (username === 'someUser' && password === 'somePassword') {
                 localStorage.setItem('userEmail', 'someUserEmail@example.com');
                 window.location.href = 'dashboard.html';
