--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
     </div>
 
     <script>
-        document.getElementById('signupForm').onsubmit = function(event) {
+        document.getElementById('signupForm').onsubmit = function(event) { 
             event.preventDefault();
             window.location.href = 'dashboard.html';
         };
 
         function flipToLogin() {
-            window.location.href = 'index.html'; // Redirects to the main HTML page
+            window.location.href = 'index.html';
         }
     </script>
 </body>
