--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taskmatrix Sign Up</title>
+    <title>Taskmatrix Login</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #1a1a2e, #0f3460, #16213e);
+            background: radial-gradient(circle at center, #1a1a2e, #0f3460, #16213e);
             color: white;
             display: flex;
             justify-content: center;
@@ -19,55 +19,32 @@
             overflow: hidden;
         }
 
-        .signup-wrapper {
-            background: #0a192f;
+        .login-wrapper {
+            background: rgba(10, 25, 47, 0.85);
             padding: 50px;
-            border-radius: 25px;
-            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.7);
+            border-radius: 20px;
+            box-shadow: 0 15px 45px rgba(0, 0, 0, 0.9);
             width: 100%;
-            max-width: 450px;
+            max-width: 400px;
             text-align: center;
             position: relative;
-            overflow: hidden;
-            transition: transform 0.6s ease-in-out;
-        }
-
-        .signup-wrapper::before, .signup-wrapper::after {
-            content: '';
-            position: absolute;
-            width: 200%;
-            height: 200%;
-            top: -50%;
-            left: -50%;
-            z-index: -1;
-            background: linear-gradient(45deg, #1cb5e0, #000851);
-            transition: transform 0.6s ease-in-out;
-        }
-
-        .signup-wrapper::before {
-            transform: rotate(45deg);
-        }
-
-        .signup-wrapper::after {
-            transform: rotate(-45deg);
-        }
-
-        .signup-wrapper:hover::before, .signup-wrapper:hover::after {
-            transform: rotate(0);
+            transition: transform 0.5s ease;
+            backdrop-filter: blur(10px);
         }
 
         h2 {
-            font-size: 32px;
-            margin-bottom: 30px;
-            background: linear-gradient(45deg, #1cb5e0, #000851);
+            font-size: 34px;
+            margin-bottom: 25px;
+            background: linear-gradient(45deg, #ff416c, #ff4b2b);
             -webkit-background-clip: text;
             color: transparent;
             letter-spacing: 2px;
             text-transform: uppercase;
+            animation: fadeIn 1.2s ease;
         }
 
         input {
-            width: calc(100% - 30px);
+            width: 100%;
             padding: 15px;
             margin: 15px 0;
             border: none;
@@ -76,19 +53,21 @@
             color: white;
             font-size: 16px;
             transition: all 0.3s ease;
+            box-shadow: inset 0 5px 10px rgba(0, 0, 0, 0.5);
+            animation: fadeIn 1.4s ease;
         }
 
         input:focus {
             outline: none;
             background: rgba(255, 255, 255, 0.2);
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.2), inset 0 0 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.3), inset 0 0 10px rgba(0, 0, 0, 0.7);
         }
 
         button {
             width: 100%;
             padding: 15px;
             margin-top: 20px;
-            background: linear-gradient(45deg, #1cb5e0, #000851);
+            background: linear-gradient(45deg, #ff416c, #ff4b2b);
             border: none;
             border-radius: 10px;
             cursor: pointer;
@@ -96,25 +75,56 @@
             font-weight: bold;
             font-size: 18px;
             transition: all 0.3s ease;
-            box-shadow: 0 7px 20px rgba(0, 133, 81, 0.5);
+            box-shadow: 0 10px 25px rgba(255, 75, 43, 0.7);
+            animation: fadeIn 1.6s ease;
         }
 
         button:hover {
-            transform: scale(1.05);
-            box-shadow: 0 10px 30px rgba(0, 133, 81, 0.7);
+            transform: scale(1.08);
+            box-shadow: 0 15px 35px rgba(255, 75, 43, 0.9);
+        }
+
+        .dashboard-button {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background: linear-gradient(45deg, #1cb5e0, #000851);
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: all 0.3s ease;
+            width: auto;
+            min-width: 150px;
+            max-width: 250px;
+            text-align: center;
+            box-shadow: 0 7px 20px rgba(0, 133, 81, 0.5);
+            opacity: 1;
+            pointer-events: auto;
+            animation: fadeIn 1.8s ease;
+        }
+
+        .dashboard-button.disabled {
+            background: gray;
+            opacity: 0.5;
+            pointer-events: none;
+            box-shadow: none;
         }
 
         .flip-link {
-            color: #1cb5e0;
+            color: #ff416c;
             cursor: pointer;
             font-size: 16px;
             display: block;
             margin-top: 20px;
             transition: color 0.3s;
+            animation: fadeIn 2s ease;
         }
 
         .flip-link:hover {
-            color: #1c90e0;
+            color: #ff6f91;
         }
 
         @media (max-width: 768px) {
@@ -122,15 +132,15 @@
                 padding: 20px;
             }
 
-            .signup-wrapper {
-                padding: 35px;
-                border-radius: 20px;
-                box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
+            .login-wrapper {
+                padding: 30px;
+                border-radius: 15px;
+                box-shadow: 0 7px 20px rgba(0, 0, 0, 0.7);
             }
 
             h2 {
-                font-size: 28px;
-                margin-bottom: 25px;
+                font-size: 26px;
+                margin-bottom: 20px;
             }
 
             input {
@@ -142,17 +152,23 @@
                 padding: 12px;
                 font-size: 16px;
             }
+
+            .dashboard-button {
+                min-width: 120px;
+                max-width: 200px;
+                font-size: 14px;
+            }
         }
 
         @media (max-width: 480px) {
-            .signup-wrapper {
-                padding: 25px;
-                border-radius: 15px;
+            .login-wrapper {
+                padding: 20px;
+                border-radius: 10px;
             }
 
             h2 {
-                font-size: 24px;
-                margin-bottom: 20px;
+                font-size: 22px;
+                margin-bottom: 15px;
             }
 
             input {
@@ -168,31 +184,100 @@
             .flip-link {
                 font-size: 14px;
             }
+
+            .dashboard-button {
+                min-width: 100px;
+                max-width: 150px;
+                font-size: 12px;
+            }
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
 <body>
-    <div class="signup-wrapper">
-        <h2>Sign Up</h2>
-        <form id="signupForm">
-            <input type="text" placeholder="Username" required>
-            <input type="email" placeholder="Email" required>
-            <input type="password" placeholder="Password" required>
-            <input type="password" placeholder="Confirm Password" required>
-            <button type="submit">Sign Up</button>
+    <div class="login-wrapper">
+        <h2>Taskmatrix Login</h2>
+        <form id="loginForm">
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <button type="submit">Login</button>
         </form>
-        <span class="flip-link" onclick="flipToLogin()">Already have an account? Log in</span>
+        <span class="flip-link" onclick="flipToSignup()">Create Account</span>
     </div>
 
-    <script>
-        document.getElementById('signupForm').onsubmit = function(event) { 
-            event.preventDefault();
-            window.location.href = 'dashboard.html';
-        };
+    <button class="dashboard-button" id="dashboardBtn" onclick="redirectToDashboard()">Skip to Dashboard</button>
 
-        function flipToLogin() {
-            window.location.href = 'index.html';
+    <script>
+        const authorizedEmails = ['grabem1@students.goshenschools.org', 'asdwwas233@gmail.com'];
+
+        function checkAdminAccess(email) {
+            return authorizedEmails.includes(email);
         }
+
+        function getUserEmail() {
+            return localStorage.getItem('userEmail');
+        }
+
+        function displayDashboardButton() {
+            const email = getUserEmail();
+            const dashboardBtn = document.getElementById('dashboardBtn');
+
+            if (email && checkAdminAccess(email)) {
+                dashboardBtn.classList.remove('disabled');
+                dashboardBtn.style.display = 'block';
+            } else {
+                dashboardBtn.classList.add('disabled');
+                dashboardBtn.style.display = 'block';
+            }
+        }
+
+        function redirectToDashboard() {
+            if (!document.getElementById('dashboardBtn').classList.contains('disabled')) {
+                window.location.href = 'dashboard.html';
+            }
+        }
+
+        function flipToSignup() {
+            window.location.href = 'signup.html';
+        }
+
+        window.onload = displayDashboardButton;
+
+        document.getElementById('loginForm').onsubmit = function(event) {
+            event.preventDefault();
+            const username = event.target.username.value;
+            const password = event.target.password.value;
+
+            fetch('/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ username, password }),
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    localStorage.setItem('userEmail', data.email);
+                    window.location.href = 'dashboard.html';
+                } else {
+                    alert('Invalid username or password');
+                }
+            })
+            .catch((error) => {
+                console.error('Error:', error);
+            });
+        };
     </script>
 </body>
 </html>
